--- a/assets/sass/_main-files/_woocommerce/orders/index.sass
+++ b/assets/sass/_main-files/_woocommerce/orders/index.sass
@@ -1,1 +1,5 @@
 @import single-page
+
+.woocommerce-BlankState
+	margin-left: auto !important
+	margin-right: auto !important
